fix typos in opening paragraph

--- a/src/content/technotes/TN0007-testing-with-apollo-federation.mdx
+++ b/src/content/technotes/TN0007-testing-with-apollo-federation.mdx
@@ -4,7 +4,7 @@ id: TN0007
 tags: [client, server, federation, testing]
 ---
 
-Testing in GraphQL may seem like it can involve more steps, but that is because your GraphQL architecture can involve many areas of your techstack, from your frontend with Apollo Client to a backend with Apollo Server, or your infrastucture with your Apollo Router to the invidudual subgraphs in your supergraph. In practice, all of these areas should be properly tested the same way if we were using any other API technology, but often the testing across boundries like teams or applications can involve some new steps. By the end of this guide you should have:
+Testing in GraphQL may seem like it can involve more steps, but that is because your GraphQL architecture can involve many areas of your tech stack, from your frontend with Apollo Client to a backend with Apollo Server, or your infrastructure with your Apollo Router to the individual subgraphs in your supergraph. In practice, all of these areas should be properly tested the same way if we were using any other API technology, but often the testing across boundaries like teams or applications can involve some new steps. By the end of this guide you should have:
 
 - [Unit testing](#unit-testing) in individual subgraphs
 - [Integration testing](#integration-testing) for the individual subgraphs
