--- a/src/content/graphos/quickstart/cloud.mdx
+++ b/src/content/graphos/quickstart/cloud.mdx
@@ -167,7 +167,7 @@ Your GraphQL API is now the first **subgraph** in a cloud supergraph. Later, we'
 
 > **Note:** It'll take a few seconds for GraphOS to finish provisioning your new variant's router. Until it's finished, you'll see an **INITIATING ENDPOINT** label next to the variant.
 
-> **Note:** Organizations can create up to 20 cloud supergraphs. Please do reach out if you believe need more, we would be very interested to hear from you and understand your use case.
+> **Note:** Organizations can create up to 20 separate cloud supergraphs. Please do reach out if you believe your org may need more than that, we would be very interested to hear from you and understand your use case.
 
 ## 3. Learn about your variant
 
