--- a/src/content/graphos/delivery/schema-checks.mdx
+++ b/src/content/graphos/delivery/schema-checks.mdx
@@ -326,3 +326,26 @@ These changes are detected by schema checks, but they are "safe." They never aff
 ### Operation check cardinality
 
 Operation checks will run against a maximum of 10,000 distinct operations. A warning message will display on the UI when a larger cardinality has been reached.
+
+### Input field usage reporting
+
+GraphOS tracks operation usage, however, in order to group duplicate operations, we use [operation signatures](../metrics/operation-signatures) which denormalize the arguments and inputs. This means that the result of the operation signature does not track which fields on input types that are used.
+
+For example, GraphOS will not be able track how many times the field `firstName` is used in this schema:
+
+```graphql
+type Query {
+  getUsers(filters: GetUsersInput): [User]
+}
+
+input GetUsersInput {
+  firstName: String
+  lastName: String
+}
+
+type User {
+  id: ID!
+  firstName: String!
+  lastName: String!
+}
+```
