--- a/src/content/technotes/TN0030-optimizing-router-builds.mdx
+++ b/src/content/technotes/TN0030-optimizing-router-builds.mdx
@@ -1,5 +1,5 @@
 ---
-title: Optimizing Apollo Router container builds with Kaniko
+title: Optimizing Apollo Router Builds
 id: TN0030
 tags: [router]
 ---
