--- a/src/content/technotes/TN0032-load-testing.mdx
+++ b/src/content/technotes/TN0032-load-testing.mdx
@@ -4,7 +4,7 @@ id: TN0032
 tags: [testing, performance]
 ---
 
-When it comes to load testing a GraphQL API, the overall process is very similar to that of any other type of API. The majority of considerations will remain the same, regardless of the API specification used. However, there are certain distinctions specific to GraphQL and the Apollo ecosystem that are worth considering before conducting a load test.
+When it comes to load testing a GraphQL API, the overall process is very similar to that of any other type of API, and the majority of considerations will remain the same. However, there are certain distinctions specific to GraphQL and the Apollo ecosystem that are worth considering before conducting a load test.
 
 It's important to note that the purpose of this article is to bring attention to these unique considerations for load testing with GraphQL, rather than serving as a comprehensive guide on the setup and execution of GraphQL load tests.
 
