--- a/src/content/technotes/TN0035-load-testing-graphql.mdx
+++ b/src/content/technotes/TN0035-load-testing-graphql.mdx
@@ -21,7 +21,7 @@ We recommend focusing on testing services in isolation to maximize insight into 
 
 ## Use Observability Tooling for Performance Insights
 
-A load test is only as valuable as the information obtained after running it. Having the proper observability setup is crucial for a successful load test. When load testing a GraphQL API, you want metrics that are GraphQL-aware and provide insight into the runtime and execution behavior of production operations. [Apollo GraphOS' metrics engine](https://www.apollographql.com/docs/graphos/metrics/usage-reporting/) provides this deep insight into operations by allowing you to see things like slow operations and [field-level performance metrics](https://www.apollographql.com/docs/graphos/metrics/usage-reporting/#resolver-level-traces) on every operation. These metrics can also be grouped by field across different operations or broken down by the clients using them.
+A load test is only as valuable as the information obtained after running it. Having the proper observability setup is crucial for a successful load test. When load testing a GraphQL API, you want metrics that are GraphQL-aware and provide insight into the runtime and execution behavior of production operations. [Apollo GraphOS' metrics engine](/graphos/metrics/usage-reporting/) provides this deep insight into operations by allowing you to see things like slow operations and [field-level performance metrics](/graphos/metrics/usage-reporting/#resolver-level-traces) on every operation. These metrics can also be grouped by field across different operations or broken down by the clients using them.
 
 Apollo also offers first-class support for sending metrics outside the Apollo ecosystem to any system that supports the [Open Telemetry](https://www.apollographql.com/docs/federation/opentelemetry/) protocol (OLTP) and a built-in Datadog integration for enterprise customers.
 
