--- a/src/content/technotes/TN0035-load-testing-graphql.mdx
+++ b/src/content/technotes/TN0035-load-testing-graphql.mdx
@@ -35,7 +35,7 @@ Another option is to create named operations that follow a naming convention tha
 
 ## Use a Realistic Load Pattern that Resembles Production Usage
 
-Load test results are most helpful if they closely match the patterns of production traffic. Take for example, a Graph that only has a set number of internal client applications. The applications have a pre-defined number of operations that hit production. It wouldn't make sense to generate 200,000 unique operations as part of a load test if the total number actual operations is several orders of magnitude less than that. It's important to simulate realistic patterns during load testing to ensure the results are relevant and useful for improving performance.
+Load test results are most helpful if they closely match the patterns of production traffic. Take a graph that only has a set number of internal client applications as an example. The applications have a pre-defined number of operations that hit production. It wouldn't make sense to generate 200,000 unique operations as part of a load test if the total number actual operations is several orders of magnitude less than that. It's important to simulate realistic patterns during load testing to ensure the results are relevant and useful for improving performance.
 
 In addition, consider testing for different scenarios such as peak usage, unexpected traffic spikes, and long-term usage patterns to ensure the GraphQL API can handle various types of load.
 
