Update the TN intro

--- a/src/content/technotes/TN0031-graph-identities.mdx
+++ b/src/content/technotes/TN0031-graph-identities.mdx
@@ -4,7 +4,7 @@ id: TN0031
 tags: [best practices, schema design]
 ---
 
-Here we are providing an example of queries/mutations which identify the actor attempting to use the graph.
+The purpose of this technote is to demonstrate queries/mutations for identifying an actor attempting to use the graph. These examples can be useful for inspiring how the actor identity may be described in a GraphQL Schema and includes multiple use-cases for both users and services.
 
 *Our use-case identifies authenticated users and services as well as anonymous users.*
 
