--- a/src/content/technotes/TN0030-optimizing-router-builds.mdx
+++ b/src/content/technotes/TN0030-optimizing-router-builds.mdx
@@ -6,8 +6,9 @@ tags: [router]
 
 While running the Apollo Router in production has great performance, this comes at the cost of increased build time and higher system requirements when compiling from source.
 
-Building the Apollo Router including custom plugins from source is a memory-expensive process, as such it’s not suited for all environments.
-Some cloud build pipelines such as Google Cloud Build, will require changes to the default build configuration in order to increase the memory and cpu capacity of the build worker pool.
+Building the Apollo Router including custom plugins from source is a memory-expensive process, and as such it’s not suited for all build environments.
+
+Some cloud build pipelines such as Google Cloud Build, will require changes to the default build configuration in order to increase the memory and CPU capacity of the build worker pool.
 
 The router will also download a large collection of dependencies during the build process, as such we can use the [Kaniko](https://github.com/GoogleContainerTools/kaniko) project which will cache intermediate build layers.
 
