--- a/src/content/technotes/TN0030-optimizing-router-builds.mdx
+++ b/src/content/technotes/TN0030-optimizing-router-builds.mdx
@@ -22,26 +22,25 @@ We also changed the default `options.machineType` value to `E2_HIGHCPU_8`, this 
 
 steps:
   - id: Build Router
-		name: gcr.io/kaniko-project/executor:latest
+    name: 'gcr.io/kaniko-project/executor:latest'
     args:
-      [ "--cache=true",
-        "--dockerfile=$_DOCKERFILE",
-        "--context=dir://$_IMAGE_NAME",
-        "--destination=$_GCR_HOSTNAME/$PROJECT_ID/$REPO_NAME/$_IMAGE_NAME:$COMMIT_SHA",
-      ]
+      - '--cache=true'
+      - '--dockerfile=$_DOCKERFILE'
+      - '--context=dir://$_IMAGE_NAME'
+      - >-
+        --destination=$_GCR_HOSTNAME/$PROJECT_ID/$REPO_NAME/$_IMAGE_NAME:$COMMIT_SHA
   - id: Deploy Router
-		name: 'gcr.io/google.com/cloudsdktool/cloud-sdk:slim'
+    name: 'gcr.io/google.com/cloudsdktool/cloud-sdk:slim'
     entrypoint: gcloud
     args:
-			[ "run",
-	      "services",
-	      "update",
-	      "$_SERVICE_NAME",
-				"--platform=managed",
-				"--image=$_GCR_HOSTNAME/$PROJECT_ID/$REPO_NAME/$_IMAGE_NAME:$COMMIT_SHA",
-				"--region=$_DEPLOY_REGION",
-		    "--quiet",
-			]
+      - run
+      - services
+      - update
+      - $_SERVICE_NAME
+      - '--platform=managed'
+      - '--image=$_GCR_HOSTNAME/$PROJECT_ID/$REPO_NAME/$_IMAGE_NAME:$COMMIT_SHA'
+      - '--region=$_DEPLOY_REGION'
+      - '--quiet'
 options:
   machineType: E2_HIGHCPU_8
 substitutions:
